--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,13 @@
         }
     ],
     "require": {
-        "php": "^7.1"
+        "php": "^7.1",
+        "ext-pdo": "*",
+        "symfony/console": "^4.3",
+        "zendframework/zend-servicemanager": "^3.3",
+        "zendframework/zend-config-aggregator": "^1.0",
+        "psr/log": "^1.1",
+        "zendframework/zend-log": "^2.11"
     },
     "autoload": {
         "psr-4": {
